fixed navbar close after navigate on mobile

--- a/src/assets/css/modules/_menu.scss
+++ b/src/assets/css/modules/_menu.scss
@@ -64,6 +64,10 @@ $sidebar-width: 50%;
             }
             &.closed {
                 right: -$sidebar-width * 2;
+                transition: all 0.5s ease-in-out;
+                -webkit-transition: all  0.5s ease-in-out;
+                -moz-transition: all  0.5s ease-in-out;
+                -o-transition: all  0.5s ease-in-out;
             }
         }
         a, a:visited {
